--- a/thoughts/add.html
+++ b/thoughts/add.html
@@ -1,3 +1,4 @@
+    <div class="new-thought pure-u-1 pure-u-md-3-4">
 <section class="add">
   <div class="add-area">
     <textarea
@@ -24,3 +25,4 @@
     </div>
   </div>
 </section>
+</div>
