--- a/authenticate.html
+++ b/authenticate.html
@@ -16,6 +16,9 @@
 </form>
 <hr />
 <h1>Signup</h1>
+<p>
+    Accounts are free. Your Thoughts are <b>private</b> and will not be shared.
+</p>
 <form class="pure-form pure-form-aligned">
     <fieldset>
         <div class="pure-control-group">
