--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="bower_components/node-uuid/uuid.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
     <script src="thoughtworks.js"></script>
+    <script src="authenticate.controller.js"></script>
     <script src="session.service.js"></script>
     <script src="profile.controller.js"></script>
     <link href='http://fonts.googleapis.com/css?family=Libre+Baskerville:400,400italic,700' rel='stylesheet' type='text/css'>
