--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="bower_components/node-uuid/uuid.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
     <script src="thoughtworks.js"></script>
+    <script src="list.controller.js"></script>
     <script src="authenticate.controller.js"></script>
     <script src="session.service.js"></script>
     <script src="profile.controller.js"></script>
@@ -38,13 +39,14 @@
           </nav>
         </div>
         <div class="current-user pure-u-1 pure-u-md-1-4" ng-controller="ProfileCtrl as profile">
-          <div class="current-user-inner" data-ng-if="isLoggedIn">
+          <div class="current-user-inner" data-ng-if="outer.isLoggedIn">
             <span class="profile-img">
               <img height="45" width="45" ng-src="{{profile.user.gravatar}}" />
             </span>
             <span class="users-name">{{profile.user.fullName}}</span>
+            <a class="users-name" href="" ng-click="profile.logout()">Logout</a>
           </div>
-          <div class="current-user-inner" data-ng-if="!isLoggedIn">
+          <div class="current-user-inner" data-ng-if="!outer.isLoggedIn">
             <a class="users-name" ui-sref="authenticate">Login / Sign Up</a>
             <a class="users-name" ui-sref="about">Find out more</a>
           </div>
