--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="A layout example that shows off a blog page with a list of posts.">
-    <title>JRNL</title>
+    <meta name="description" content="Keep your Diary or Journal on the Thoughtstore.">
+    <title>ThoughtStore Daily Diary/Journal</title>
     <link rel="stylesheet" href="bower_components/purecss/build/pure-min.css">
     <link rel="stylesheet" href="bower_components/purecss/build/grids-responsive-min.css">
     <link rel="stylesheet" href="thoughtworks.css">
