--- a/src/index.html
+++ b/src/index.html
@@ -5,20 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Keep your Diary or Journal on the Thoughtstore.">
     <title>ThoughtStore Daily Diary/Journal</title>
-    <link rel="stylesheet" href="bower_components/purecss/build/pure-min.css">
-    <link rel="stylesheet" href="bower_components/purecss/build/grids-responsive-min.css">
-    <link rel="stylesheet" href="thoughtworks.css">
-    <script src="bower_components/angularjs/angular.min.js"></script>
-    <script src="bower_components/angular-sanitize/angular-sanitize.min.js"></script>
-    <script src="bower_components/angular-indexed-db/angular-indexed-db.min.js"></script>
-    <script src="bower_components/angular-scroll-glue/src/scrollglue.js"></script>
-    <script src="bower_components/node-uuid/uuid.js"></script>
-    <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
-    <script src="thoughtworks.js"></script>
-    <script src="list.controller.js"></script>
-    <script src="authenticate.controller.js"></script>
-    <script src="session.service.js"></script>
-    <script src="profile.controller.js"></script>
+    <link rel="stylesheet" href="css/vendor.min.css" type="text/css" />
+    <link rel="stylesheet" href="css/app.min.css" type="text/css" />
+    <script src="js/vendor.min.js"></script>
+    <script src="js/partials.min.js"></script>
+    <script src="js/app.min.js"></script>
+
     <link href='http://fonts.googleapis.com/css?family=Libre+Baskerville:400,400italic,700' rel='stylesheet' type='text/css'>
   </head>
   <body>
