Rename to Thoughtstore

--- a/src/index.html
+++ b/src/index.html
@@ -34,10 +34,10 @@
           </div>
         </div>
       </div>
-      <div id="thoughts" class="content pure-u-1 pure-u-md-3-4" scroll-glue>
+      <div id="thoughts" class="content pure-u-1 pure-u-md-3-4" jrnl-max-height>
         <div ui-view="primary"></div>
       </div>
     </div>
-    <div ui-view="secondary"></div>
+    <div id="secondary" ui-view="secondary"></div>
   </body>
 </html>
